# wwa-maker-day

./: LICENSE  README.md
code/: movement_sensor.py  wifi.py
group-2/: color_mixer.py  counter.py  pyproject.toml  rainbow.py  renku_frog_hub75.py  renku_frog_hub75x2.py  renku_frog_hub75x2_cleaned.py  sensors.py
group-3/: .gitignore  README.md
group-3/src/: double-led.py
