[tool.poetry]
name = "wwa-maker-day-group-2"
version = "0.1.0"
description = ""
authors = ["Flora Thiebaut <flora.thiebaut@sdsc.ethz.ch>"]
readme = "README.md"
packages = [{include = "wwa_maker_day_group_2"}]

[tool.poetry.dependencies]
python = "^3.11.0"

[tool.poetry.group.dev.dependencies]
thonny = "^4.1.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
